--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7367141985992219"
+     crossorigin="anonymous"></script>
   <title>GEXT:A gesture based text editor</title>
   <link rel="stylesheet" href="./style.css">
 
